Enable the RPC and disable the deployement

--- a/go-ethereum/Dockerfile
+++ b/go-ethereum/Dockerfile
@@ -14,4 +14,4 @@ VOLUME /var/lib/ethereum
 USER ethereum
 WORKDIR /var/lib/ethereum
 
-ENTRYPOINT ["/usr/local/bin/geth", "--datadir", "/var/lib/ethereum"]
+ENTRYPOINT ["/usr/local/bin/geth", "--rpc", "--datadir", "/var/lib/ethereum"]
