--- a/circle.yml
+++ b/circle.yml
@@ -9,11 +9,4 @@ dependencies:
 
 test:
   override:
-    - docker run -d -P lolo/go-ethereum
-
-deployment:
-  hub:
-    branch: master
-    commands:
-      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push lolo/go-ethereum
+    - docker run lolo/go-ethereum version
