--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
       - image: docker
     steps:
       - checkout
+      - setup_remote_docker
       - run: docker info
       - run: docker build -t lolo/go-ethereum go-ethereum
       - run: docker run lolo/go-ethereum version
