1st working server version

--- a/http-daemon-with-db/Dockerfile
+++ b/http-daemon-with-db/Dockerfile
@@ -1,6 +1,9 @@
 FROM python
-MAINTAINER Laurent Raufaste <analogue@glop.org>
-LABEL version=0.1
+LABEL maintainer="Laurent Raufaste <analogue@glop.org>"
+LABEL version="0.1"
+
+COPY main.py main.py
+RUN pip install docopt
 
 EXPOSE 8000
 
