--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,8 @@ jobs:
       - checkout
       - setup_remote_docker
       - run: docker info
-      - run: docker build -t lolo/build-http-daemon-with-db http-daemon-with-db
-      - run: docker run lolo/build-http-daemon-with-db
+      - run: docker build -t lolo/http-daemon-with-db http-daemon-with-db
+      - run: docker run lolo/http-daemon-with-db --env
 
 workflows:
   version: 2
