--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,12 +29,16 @@ jobs:
   build-http-daemon-with-db:
     docker:
       - image: docker
+      - image: mysql
+      - image: postgresql
     steps:
       - checkout
       - setup_remote_docker
       - run: docker info
       - run: docker build -t lolo/http-daemon-with-db http-daemon-with-db
       - run: docker run lolo/http-daemon-with-db --env
+      - run: docker run --env "DATABASE_URL=mysql://" lolo/http-daemon-with-db
+      - run: docker run --env "DATABASE_URL=postgresql://" lolo/http-daemon-with-db
 
 workflows:
   version: 2
