--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,8 @@ jobs:
     docker:
       - image: docker
       - image: mysql
+        environment:
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
       - image: postgres
     steps:
       - checkout
