--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,14 +28,17 @@ jobs:
   build-http-daemon-with-db:
     docker:
       - image: docker
-      - image: circleci/mysql
+      - image: circleci/mysql:5.6
+        environment:
+          - MYSQL_ALLOW_EMPTY_PASSWORD: true
+          - MYSQL_ROOT_HOST: %
       - image: circleci/postgres
     steps:
       - checkout
       - setup_remote_docker
       - run: docker build -t lolo/http-daemon-with-db http-daemon-with-db
       - run: docker run lolo/http-daemon-with-db dump-env-vars
-      - run: docker run --env "DATABASE_URL=mysql://" lolo/http-daemon-with-db no-daemon
+      - run: docker run --env "DATABASE_URL=mysql://root@127.0.0.1/circle_test" lolo/http-daemon-with-db no-daemon
       - run: docker run --env "DATABASE_URL=postgresql://" lolo/http-daemon-with-db no-daemon
 
 workflows:
