--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,10 +34,22 @@ jobs:
       - run: docker build -t lolo/http-daemon-with-db http-daemon-with-db
       - run: docker run lolo/http-daemon-with-db dump-env-vars
 
-  test-http-daemon-with-db:
+  test-http-daemon-with-mysql:
     docker:
       - image: python
       - image: circleci/mysql
+    steps:
+      - checkout
+      - run: pip install --requirement http-daemon-with-db/requirements.txt
+      - run: python http-daemon-with-db/main.py dump-env-vars
+      - run:
+          command: python http-daemon-with-db/main.py no-daemon
+          environment:
+            DATABASE_URL: "mysql://127.0.0.1"
+
+  test-http-daemon-with-postgresql:
+    docker:
+      - image: python
       - image: circleci/postgres
     steps:
       - checkout
@@ -46,11 +58,7 @@ jobs:
       - run:
           command: python http-daemon-with-db/main.py no-daemon
           environment:
-            DATABASE_URL: "mysql://"
-      - run:
-          command: python http-daemon-with-db/main.py no-daemon
-          environment:
-            DATABASE_URL: "postgresql://"
+            DATABASE_URL: "postgresql://127.0.0.1/postgres"
 
 workflows:
   version: 2
@@ -59,5 +67,9 @@ workflows:
       - mdl
       - flake8
       - build-go-ethereum
-      - build-http-daemon-with-db
-      - test-http-daemon-with-db
+      - test-http-daemon-with-mysql
+      - test-http-daemon-with-postgresql
+      - build-http-daemon-with-db:
+          requires:
+            - test-http-daemon-with-mysql
+            - test-http-daemon-with-postgresql
